--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next": "12.1.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "sass": "^1.49.9"
+    "sass": "^1.49.9",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.4",
