--- a/package.json
+++ b/package.json
@@ -14,14 +14,18 @@
     "next": "12.1.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-responsive": "^9.0.0-beta.6",
     "sass": "^1.49.9",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
+    "@types/node": "^17.0.25",
+    "@types/react": "^18.0.1",
     "autoprefixer": "^10.4.4",
     "eslint": "8.12.0",
     "eslint-config-next": "12.1.1",
     "postcss": "^8.4.12",
-    "tailwindcss": "^3.0.23"
+    "tailwindcss": "^3.0.23",
+    "typescript": "^4.6.3"
   }
 }
