--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-dom": "17.0.2",
     "react-responsive": "^9.0.0-beta.6",
     "sass": "^1.49.9",
-    "styled-components": "^5.3.5"
+    "styled-components": "^5.3.5",
+    "swiper": "^8.1.4"
   },
   "devDependencies": {
     "@types/node": "^17.0.25",
