--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "12.1.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-hook-form": "^7.30.0",
     "react-responsive": "^9.0.0-beta.6",
     "sass": "^1.49.9",
     "styled-components": "^5.3.5",
