--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@react-google-maps/api": "^2.10.3",
+    "@types/nodemailer": "^6.4.4",
     "axios": "^0.26.1",
     "classnames": "^2.3.1",
     "google-maps-react": "^2.0.6",
     "next": "12.1.1",
+    "nodemailer": "^6.7.5",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.31.1",
