--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.26.1",
     "classnames": "^2.3.1",
     "google-maps-react": "^2.0.6",
+    "hamburger-react": "^2.5.0",
     "next": "12.1.1",
     "nodemailer": "^6.7.5",
     "react": "17.0.2",
